syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "com.husbylabs.warptables.packets";
option java_multiple_files = true;

service Field {
    rpc Fetch(FetchRequest) returns (FieldResponse);
    rpc Post(FieldUpdatePost) returns (google.protobuf.Empty);
    rpc Subscribe(SubscribeFieldRequest) returns (stream FieldUpdate);
}

message FetchRequest {
    string path = 1;
}

message FieldResponse {
    string path = 1;
    int32 handle = 2;
}

message FieldUpdatePost {
    int32 clientId = 1;
    FieldUpdate update = 2;
}

message FieldUpdate {
    int32 handle = 1;
    enum Type {
        BOOL = 0;
        NUMBER = 1;
        STRING = 2;
        BOOL_ARRAY = 3;
        NUMBER_ARRAY = 4;
        STRING_ARRAY = 5;
    }
    Type type = 2;
    repeated string value = 3;
}

message SubscribeFieldRequest {
    int32 clientId = 1;
}